--- a/Mini Projects/Batman Website/index.html
+++ b/Mini Projects/Batman Website/index.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Batman - HomePage</title>
-    <link rel="stylesheet" href="style.css" />
+    <link rel="stylesheet" href="styleIndex.css" />
   </head>
   <body>
     <div class="header">
@@ -17,6 +17,9 @@
           <li><a href="./aboutus.html">ABOUT US</a></li>
           <li><a href="./contactus.html">CONTACT US</a></li>
         </ul>
+      </div>
+      <div class="hamburger">
+        <img src="./images/hamburger.png" alt="Hamburger Here">
       </div>
     </div>
     <div class="welcome-msg">
